--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -148,6 +148,10 @@ a:hover, a:active, a:focus {
   text-align: center;
 }
 
+.justifyallignment{
+  text-align: justify;
+}
+
 .overlay {
   background: #304352;
   opacity: 0.9;
@@ -418,6 +422,8 @@ a:hover, a:active, a:focus {
 
 #about .team-thumb:hover {
   background: #304352;
+  height: 100%;
+  width: 100%;
 }
 
 #about .team-thumb:hover .image-holder {
